# bossa

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
api/: index.py
backend/: .env.example  requirements.txt  seed.py
backend/scripts/: create_workspace.py
backend/src/: auth.py  config.py  db.py  dependencies.py  main.py  models.py
backend/src/api/: billing.py  files.py  keys.py  router.py  usage.py  workspaces.py
backend/src/auth/: __init__.py  jwt.py
backend/src/engine/: __init__.py  filesystem.py  path_utils.py
backend/src/mcp/: request_context.py  server.py
backend/src/usage/: __init__.py
cli/: __init__.py  __main__.py  auth.py  auth_commands.py  billing.py  config.py  files.py  init_commands.py  keys.py  main.py  usage.py  workspace_context.py  workspaces.py
docs/: ADD_DOCS_AS_MCP.md  AGENT_INTEGRATION.md  CLI.md  CLI_AGENTS.md  DYNAMIC_CONTEXT_DISCOVERY.md  GETTING_STARTED.md  MCP.md  PRICING.md  README.md  REST_API.md  SELF_HOSTING.md  USE_CASES.md  WHY_FILESYSTEM.md  docs.json  index.mdx
examples/: .env.example  README.md  agent.py  chat.py  requirements.txt
scripts/: deploy.sh  run_local.sh  test_cli.sh
supabase/migrations/: 001_initial_schema.sql  002_workspace_api_keys.sql  003_workspace_user_ownership.sql  004_folders.sql  005_usage_limits.sql  006_tier_enum.sql  007_schema_indexes.sql  008_workspaces_user_fk.sql  009_account_tiers_updated_at.sql  010_usage_daily_user_fk.sql
tests/: conftest.py  test_api.py  test_auth.py  test_billing.py  test_cli.py  test_db.py  test_filesystem.py  test_filesystem_limits.py  test_init_commands.py  test_integration.py  test_mcp_tools.py  test_usage.py  test_workspaces.py
