[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bossa-memory"
version = "0.1.5"
description = "Your AI agent's long-term memory. Persistent filesystem backed by Postgres."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vinicius" }]
keywords = ["filesystem", "agents", "mcp", "ai", "memory", "postgres"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Backend (Vercel, API, MCP)
    "fastmcp",
    "stripe",
    "fastapi",
    "uvicorn[standard]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyjwt",
    "cryptography",
    # CLI
    "typer",
    "rich",
    "questionary>=2.0.0",
    "supabase",
    "httpx",
]

[project.scripts]
bossa = "cli.main:main"

[project.urls]
Homepage = "https://docs.bossamemory.com"
Documentation = "https://docs.bossamemory.com"
Repository = "https://github.com/vinny380/bossa"

[tool.setuptools.packages.find]
include = ["cli*"]
